update for PWM/OLED

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
     adafruit/Adafruit Unified Sensor
     marcoschwartz/LiquidCrystal_I2C
     bblanchon/ArduinoJson @ ^7.0.0
+    git@github.com:durydevelop/arduino-lib-oled.git
